made the lorem text longer

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -12,15 +12,15 @@
     <section id="grids">
         <div class="div1">
             <h1 class="book">Book</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, alias quo repellat reprehenderit perferendis esse officia nam nesciunt. Totam, ea.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic fuga, accusantium similique aliquam est laboriosam eveniet vel inventore sapiente iusto cum illo earum facilis corrupti natus, ad unde, dolore numquam.</p>
         </div>
         <div class="div2">
             <h1 class="car">car</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, alias quo repellat reprehenderit perferendis esse officia nam nesciunt. Totam, ea.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic fuga, accusantium similique aliquam est laboriosam eveniet vel inventore sapiente iusto cum illo earum facilis corrupti natus, ad unde, dolore numquam.</p>
         </div>
         <div class="div3">
             <h1 class="house">House</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, alias quo repellat reprehenderit perferendis esse officia nam nesciunt. Totam, ea.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic fuga, accusantium similique aliquam est laboriosam eveniet vel inventore sapiente iusto cum illo earum facilis corrupti natus, ad unde, dolore numquam.</p>
         </div>
     </section>
 </body>
