made mod3 responsive

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -9,7 +9,30 @@
 
 </head>
 <body>
-    
+    <h1 class="text-center py-4" id="OurMenu">Our Menu</h1>
+    <section class="row">
+        <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="container con">
+                <h1 class="text-center subh1" >Book</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nemo unde aliquam, tenetur numquam dicta maxime. Consectetur, dolor accusamus, recusandae expedita harum, deleniti error ipsam tempora veritatis voluptates provident minus nesciunt doloribus nisi. Pariatur, expedita architecto deleniti quibusdam, harum in, corporis laudantium nesciunt molestiae quasi animi voluptatibus officia excepturi deserunt.</p>
+                <a href="#OurMenu"></a>
+            </div>
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="container con">
+                <h1 class="text-center subh1">car</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nemo unde aliquam, tenetur numquam dicta maxime. Consectetur, dolor accusamus, recusandae expedita harum, deleniti error ipsam tempora veritatis voluptates provident minus nesciunt doloribus nisi. Pariatur, expedita architecto deleniti quibusdam, harum in, corporis laudantium nesciunt molestiae quasi animi voluptatibus officia excepturi deserunt.</p>
+                <a href="#OurMenu"></a>
+            </div>
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="container con">
+                <h1 class="text-center subh1">House</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nemo unde aliquam, tenetur numquam dicta maxime. Consectetur, dolor accusamus, recusandae expedita harum, deleniti error ipsam tempora veritatis voluptates provident minus nesciunt doloribus nisi. Pariatur, expedita architecto deleniti quibusdam, harum in, corporis laudantium nesciunt molestiae quasi animi voluptatibus officia excepturi deserunt.</p>
+                <a href="#OurMenu"></a>
+            </div>
+       </div>
+    </section>
     <!-- Bootstrap CSS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
