--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -18,16 +18,16 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse " id="navbarNav">
+              <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ">
-                  <li class="nav-item ml-auto">
-                    <a class="nav-link "  href="#book">Book</a>
+                  <li class="nav-item pl-5">
+                    <a class="nav-link text-center"  href="#book">Book</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#car">Car</a>
+                    <a class="nav-link text-center" href="#car">Car</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#house">House</a>
+                    <a class="nav-link text-center" href="#house">House</a>
                   </li>
                 </ul>
               </div>
