--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -19,15 +19,15 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ">
-                  <li class="nav-item pl-5">
-                    <a class="nav-link text-center"  href="#book">Book</a>
+                <ul class="navbar-nav d-md-none">
+                  <li class="nav-item ">
+                    <a class="nav-link text-center"  href="#Chicken">Chicken</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-center" href="#car">Car</a>
+                    <a class="nav-link text-center" href="#Beef">Beef</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-center" href="#house">House</a>
+                    <a class="nav-link text-center" href="#Sushi">Sushi</a>
                   </li>
                 </ul>
               </div>
@@ -40,24 +40,24 @@
        <div class="row">
         <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="container con">
-                <h3 class="text-center subh1" id="book">Book</h3>
+                <h3 class="text-center subh1" id="Chicken">Chicken</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nemo unde aliquam, tenetur numquam dicta maxime. Consectetur, dolor accusamus, recusandae expedita harum, deleniti error ipsam tempora veritatis voluptates provident minus nesciunt doloribus nisi. Pariatur, expedita architecto deleniti quibusdam, harum in, corporis laudantium nesciunt molestiae quasi animi voluptatibus officia excepturi deserunt.</p>
-               <p>(End of Book section) <a href="#OurMenu">Back to top</a></p>
+               <p>(End of Chicken section) <a href="#OurMenu">Back to top</a></p>
             </div>
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="container con">
-                <h3 class="text-center subh1" id="car">car</h3>
+                <h3 class="text-center subh1" id="Beef">Beef</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nemo unde aliquam, tenetur numquam dicta maxime. Consectetur, dolor accusamus, recusandae expedita harum, deleniti error ipsam tempora veritatis voluptates provident minus nesciunt doloribus nisi. Pariatur, expedita architecto deleniti quibusdam, harum in, corporis laudantium nesciunt molestiae quasi animi voluptatibus officia excepturi deserunt.</p>
-                <p>(End of Car section) <a href="#OurMenu">Back to top</a></p>
+                <p>(End of Beef section) <a href="#OurMenu">Back to top</a></p>
             </div>
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12">
             <div class=" con ">
                 <div class="container-fluid">
-                    <h3 class="text-center subh1" id="house">House</h3>
+                    <h3 class="text-center subh1" id="Sushi">Sushi</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nemo unde aliquam, tenetur numquam dicta maxime. Consectetur, dolor accusamus, recusandae expedita harum, deleniti error ipsam tempora veritatis voluptates provident minus nesciunt doloribus nisi. Pariatur, expedita architecto deleniti quibusdam, harum in, corporis laudantium nesciunt molestiae quasi animi voluptatibus officia excepturi deserunt.</p>
-                <p>(End of House section) <a href="#OurMenu">Back to top</a></p>
+                <p>(End of Sushi section) <a href="#OurMenu">Back to top</a></p>
                 </div>
             </div>
        </div>
