--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -6,8 +6,15 @@
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
+  <style>
+    *{
+      font-family: monospace;
+    }
+  </style>
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
+  <h2>Click on ctrl-shift-I to open the developer console</h2>
+  <p>-Work by <a href="https://github.com/calebareeveso" target="_blank">Caleb Areeveso</a> </p>
 </body>
 </html>
